src/analyzers/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASIGNAR
    A_CADENA
    CAPTURAR
    CODIGO
    COMENTARIO
    CORCHETE_DER
    CORCHETE_IZQ
    DOS_PUNTOS
    EXCEPCION
    FUNCION
    INTENTAR
    NUEVA_LINEA
    RETORNA
    SINO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> COMENZAR bloque_codigo TERMINAR
Rule 2     bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER
Rule 3     lista_declaraciones -> lista_declaraciones declaracion
Rule 4     lista_declaraciones -> declaracion
Rule 5     declaracion -> tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA
Rule 6     declaracion -> expresion PUNTO_COMA
Rule 7     declaracion -> si
Rule 8     declaracion -> para
Rule 9     declaracion -> mientras
Rule 10    declaracion -> mostrar_en_pantalla
Rule 11    tipo -> ENTERO
Rule 12    tipo -> DECIMAL
Rule 13    tipo -> BOOL
Rule 14    tipo -> LISTA
Rule 15    tipo -> DICCIONARIO
Rule 16    expresion -> expresion operador expresion
Rule 17    expresion -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 18    expresion -> IDENTIFICADOR
Rule 19    expresion -> NUMENTERO
Rule 20    expresion -> NUMDECIMAL
Rule 21    expresion -> BOOL
Rule 22    expresion -> CADENA
Rule 23    expresion -> lista
Rule 24    operador -> MAS
Rule 25    operador -> MENOS
Rule 26    operador -> POR
Rule 27    operador -> DIVIDIDO
Rule 28    operador -> IGUAL
Rule 29    operador -> DIFERENTE
Rule 30    operador -> MENOR
Rule 31    operador -> MAYOR
Rule 32    operador -> MENOR_IGUAL
Rule 33    operador -> MAYOR_IGUAL
Rule 34    operador -> Y
Rule 35    operador -> O
Rule 36    operador -> NO
Rule 37    lista -> LISTA menor_tipo LLAVE_IZQ valores_lista LLAVE_DER
Rule 38    menor_tipo -> MENOR IDENTIFICADOR MAYOR
Rule 39    valores_lista -> valores_lista COMA valor_lista
Rule 40    valores_lista -> valor_lista
Rule 41    valor_lista -> NUMENTERO
Rule 42    valor_lista -> NUMDECIMAL
Rule 43    valor_lista -> BOOL
Rule 44    si -> SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
Rule 45    si -> SI PARENTESIS_IZQ expresion Y expresion PARENTESIS_DER bloque_codigo
Rule 46    si -> SI PARENTESIS_IZQ expresion O expresion PARENTESIS_DER bloque_codigo
Rule 47    si -> SI PARENTESIS_IZQ NO expresion PARENTESIS_DER bloque_codigo
Rule 48    para -> PARA PARENTESIS_IZQ tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA expresion PARENTESIS_DER bloque_codigo
Rule 49    mientras -> MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
Rule 50    mostrar_en_pantalla -> MOSTRAR_EN_PANTALLA PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
Rule 51    declaracion -> error IDENTIFICADOR IGUAL expresion PUNTO_COMA
Rule 52    declaracion -> tipo error IGUAL expresion PUNTO_COMA
Rule 53    declaracion -> error PUNTO_COMA

Terminals, with rules where they appear

ASIGNAR              : 
A_CADENA             : 
BOOL                 : 13 21 43
CADENA               : 22
CAPTURAR             : 
CODIGO               : 
COMA                 : 39
COMENTARIO           : 
COMENZAR             : 1
CORCHETE_DER         : 
CORCHETE_IZQ         : 
DECIMAL              : 12
DICCIONARIO          : 15
DIFERENTE            : 29
DIVIDIDO             : 27
DOS_PUNTOS           : 
ENTERO               : 11
EXCEPCION            : 
FUNCION              : 
IDENTIFICADOR        : 5 18 38 48 51
IGUAL                : 5 28 48 51 52
INTENTAR             : 
LISTA                : 14 37
LLAVE_DER            : 2 37
LLAVE_IZQ            : 2 37
MAS                  : 24
MAYOR                : 31 38
MAYOR_IGUAL          : 33
MENOR                : 30 38
MENOR_IGUAL          : 32
MENOS                : 25
MIENTRAS             : 49
MOSTRAR_EN_PANTALLA  : 50
NO                   : 36 47
NUEVA_LINEA          : 
NUMDECIMAL           : 20 42
NUMENTERO            : 19 41
O                    : 35 46
PARA                 : 48
PARENTESIS_DER       : 17 44 45 46 47 48 49 50
PARENTESIS_IZQ       : 17 44 45 46 47 48 49 50
POR                  : 26
PUNTO_COMA           : 5 6 48 48 50 51 52 53
RETORNA              : 
SI                   : 44 45 46 47
SINO                 : 
TERMINAR             : 1
Y                    : 34 45
error                : 51 52 53

Nonterminals, with rules where they appear

bloque_codigo        : 1 44 45 46 47 48 49
declaracion          : 3 4
expresion            : 5 6 16 16 17 44 45 45 46 46 47 48 48 48 49 50 51 52
lista                : 23
lista_declaraciones  : 2 3
menor_tipo           : 37
mientras             : 9
mostrar_en_pantalla  : 10
operador             : 16
para                 : 8
programa             : 0
si                   : 7
tipo                 : 5 48 52
valor_lista          : 39 40
valores_lista        : 37 39

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . COMENZAR bloque_codigo TERMINAR

    COMENZAR        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> COMENZAR . bloque_codigo TERMINAR
    (2) bloque_codigo -> . LLAVE_IZQ lista_declaraciones LLAVE_DER

    LLAVE_IZQ       shift and go to state 4

    bloque_codigo                  shift and go to state 3

state 3

    (1) programa -> COMENZAR bloque_codigo . TERMINAR

    TERMINAR        shift and go to state 5


state 4

    (2) bloque_codigo -> LLAVE_IZQ . lista_declaraciones LLAVE_DER
    (3) lista_declaraciones -> . lista_declaraciones declaracion
    (4) lista_declaraciones -> . declaracion
    (5) declaracion -> . tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (6) declaracion -> . expresion PUNTO_COMA
    (7) declaracion -> . si
    (8) declaracion -> . para
    (9) declaracion -> . mientras
    (10) declaracion -> . mostrar_en_pantalla
    (51) declaracion -> . error IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (52) declaracion -> . tipo error IGUAL expresion PUNTO_COMA
    (53) declaracion -> . error PUNTO_COMA
    (11) tipo -> . ENTERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOL
    (14) tipo -> . LISTA
    (15) tipo -> . DICCIONARIO
    (16) expresion -> . expresion operador expresion
    (17) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (18) expresion -> . IDENTIFICADOR
    (19) expresion -> . NUMENTERO
    (20) expresion -> . NUMDECIMAL
    (21) expresion -> . BOOL
    (22) expresion -> . CADENA
    (23) expresion -> . lista
    (44) si -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
    (45) si -> . SI PARENTESIS_IZQ expresion Y expresion PARENTESIS_DER bloque_codigo
    (46) si -> . SI PARENTESIS_IZQ expresion O expresion PARENTESIS_DER bloque_codigo
    (47) si -> . SI PARENTESIS_IZQ NO expresion PARENTESIS_DER bloque_codigo
    (48) para -> . PARA PARENTESIS_IZQ tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA expresion PARENTESIS_DER bloque_codigo
    (49) mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
    (50) mostrar_en_pantalla -> . MOSTRAR_EN_PANTALLA PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (37) lista -> . LISTA menor_tipo LLAVE_IZQ valores_lista LLAVE_DER

    error           shift and go to state 15
    ENTERO          shift and go to state 16
    DECIMAL         shift and go to state 17
    BOOL            shift and go to state 18
    LISTA           shift and go to state 19
    DICCIONARIO     shift and go to state 20
    PARENTESIS_IZQ  shift and go to state 21
    IDENTIFICADOR   shift and go to state 9
    NUMENTERO       shift and go to state 22
    NUMDECIMAL      shift and go to state 23
    CADENA          shift and go to state 24
    SI              shift and go to state 26
    PARA            shift and go to state 27
    MIENTRAS        shift and go to state 28
    MOSTRAR_EN_PANTALLA shift and go to state 29

    lista_declaraciones            shift and go to state 6
    declaracion                    shift and go to state 7
    tipo                           shift and go to state 8
    expresion                      shift and go to state 10
    si                             shift and go to state 11
    para                           shift and go to state 12
    mientras                       shift and go to state 13
    mostrar_en_pantalla            shift and go to state 14
    lista                          shift and go to state 25

state 5

    (1) programa -> COMENZAR bloque_codigo TERMINAR .

    $end            reduce using rule 1 (programa -> COMENZAR bloque_codigo TERMINAR .)


state 6

    (2) bloque_codigo -> LLAVE_IZQ lista_declaraciones . LLAVE_DER
    (3) lista_declaraciones -> lista_declaraciones . declaracion
    (5) declaracion -> . tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (6) declaracion -> . expresion PUNTO_COMA
    (7) declaracion -> . si
    (8) declaracion -> . para
    (9) declaracion -> . mientras
    (10) declaracion -> . mostrar_en_pantalla
    (51) declaracion -> . error IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (52) declaracion -> . tipo error IGUAL expresion PUNTO_COMA
    (53) declaracion -> . error PUNTO_COMA
    (11) tipo -> . ENTERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOL
    (14) tipo -> . LISTA
    (15) tipo -> . DICCIONARIO
    (16) expresion -> . expresion operador expresion
    (17) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (18) expresion -> . IDENTIFICADOR
    (19) expresion -> . NUMENTERO
    (20) expresion -> . NUMDECIMAL
    (21) expresion -> . BOOL
    (22) expresion -> . CADENA
    (23) expresion -> . lista
    (44) si -> . SI PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
    (45) si -> . SI PARENTESIS_IZQ expresion Y expresion PARENTESIS_DER bloque_codigo
    (46) si -> . SI PARENTESIS_IZQ expresion O expresion PARENTESIS_DER bloque_codigo
    (47) si -> . SI PARENTESIS_IZQ NO expresion PARENTESIS_DER bloque_codigo
    (48) para -> . PARA PARENTESIS_IZQ tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA expresion PARENTESIS_DER bloque_codigo
    (49) mientras -> . MIENTRAS PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
    (50) mostrar_en_pantalla -> . MOSTRAR_EN_PANTALLA PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA
    (37) lista -> . LISTA menor_tipo LLAVE_IZQ valores_lista LLAVE_DER

    LLAVE_DER       shift and go to state 30
    error           shift and go to state 15
    ENTERO          shift and go to state 16
    DECIMAL         shift and go to state 17
    BOOL            shift and go to state 18
    LISTA           shift and go to state 19
    DICCIONARIO     shift and go to state 20
    PARENTESIS_IZQ  shift and go to state 21
    IDENTIFICADOR   shift and go to state 9
    NUMENTERO       shift and go to state 22
    NUMDECIMAL      shift and go to state 23
    CADENA          shift and go to state 24
    SI              shift and go to state 26
    PARA            shift and go to state 27
    MIENTRAS        shift and go to state 28
    MOSTRAR_EN_PANTALLA shift and go to state 29

    declaracion                    shift and go to state 31
    tipo                           shift and go to state 8
    expresion                      shift and go to state 10
    si                             shift and go to state 11
    para                           shift and go to state 12
    mientras                       shift and go to state 13
    mostrar_en_pantalla            shift and go to state 14
    lista                          shift and go to state 25

state 7

    (4) lista_declaraciones -> declaracion .

    LLAVE_DER       reduce using rule 4 (lista_declaraciones -> declaracion .)
    error           reduce using rule 4 (lista_declaraciones -> declaracion .)
    ENTERO          reduce using rule 4 (lista_declaraciones -> declaracion .)
    DECIMAL         reduce using rule 4 (lista_declaraciones -> declaracion .)
    BOOL            reduce using rule 4 (lista_declaraciones -> declaracion .)
    LISTA           reduce using rule 4 (lista_declaraciones -> declaracion .)
    DICCIONARIO     reduce using rule 4 (lista_declaraciones -> declaracion .)
    PARENTESIS_IZQ  reduce using rule 4 (lista_declaraciones -> declaracion .)
    IDENTIFICADOR   reduce using rule 4 (lista_declaraciones -> declaracion .)
    NUMENTERO       reduce using rule 4 (lista_declaraciones -> declaracion .)
    NUMDECIMAL      reduce using rule 4 (lista_declaraciones -> declaracion .)
    CADENA          reduce using rule 4 (lista_declaraciones -> declaracion .)
    SI              reduce using rule 4 (lista_declaraciones -> declaracion .)
    PARA            reduce using rule 4 (lista_declaraciones -> declaracion .)
    MIENTRAS        reduce using rule 4 (lista_declaraciones -> declaracion .)
    MOSTRAR_EN_PANTALLA reduce using rule 4 (lista_declaraciones -> declaracion .)


state 8

    (5) declaracion -> tipo . IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (52) declaracion -> tipo . error IGUAL expresion PUNTO_COMA

    IDENTIFICADOR   shift and go to state 32
    error           shift and go to state 33


state 9

    (18) expresion -> IDENTIFICADOR .

    PUNTO_COMA      reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MAS             reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MENOS           reduce using rule 18 (expresion -> IDENTIFICADOR .)
    POR             reduce using rule 18 (expresion -> IDENTIFICADOR .)
    DIVIDIDO        reduce using rule 18 (expresion -> IDENTIFICADOR .)
    IGUAL           reduce using rule 18 (expresion -> IDENTIFICADOR .)
    DIFERENTE       reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MENOR           reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MAYOR           reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MENOR_IGUAL     reduce using rule 18 (expresion -> IDENTIFICADOR .)
    MAYOR_IGUAL     reduce using rule 18 (expresion -> IDENTIFICADOR .)
    Y               reduce using rule 18 (expresion -> IDENTIFICADOR .)
    O               reduce using rule 18 (expresion -> IDENTIFICADOR .)
    NO              reduce using rule 18 (expresion -> IDENTIFICADOR .)
    PARENTESIS_DER  reduce using rule 18 (expresion -> IDENTIFICADOR .)


state 10

    (6) declaracion -> expresion . PUNTO_COMA
    (16) expresion -> expresion . operador expresion
    (24) operador -> . MAS
    (25) operador -> . MENOS
    (26) operador -> . POR
    (27) operador -> . DIVIDIDO
    (28) operador -> . IGUAL
    (29) operador -> . DIFERENTE
    (30) operador -> . MENOR
    (31) operador -> . MAYOR
    (32) operador -> . MENOR_IGUAL
    (33) operador -> . MAYOR_IGUAL
    (34) operador -> . Y
    (35) operador -> . O
    (36) operador -> . NO

    PUNTO_COMA      shift and go to state 34
    MAS             shift and go to state 36
    MENOS           shift and go to state 37
    POR             shift and go to state 38
    DIVIDIDO        shift and go to state 39
    IGUAL           shift and go to state 40
    DIFERENTE       shift and go to state 41
    MENOR           shift and go to state 42
    MAYOR           shift and go to state 43
    MENOR_IGUAL     shift and go to state 44
    MAYOR_IGUAL     shift and go to state 45
    Y               shift and go to state 46
    O               shift and go to state 47
    NO              shift and go to state 48

    operador                       shift and go to state 35

state 11

    (7) declaracion -> si .

    LLAVE_DER       reduce using rule 7 (declaracion -> si .)
    error           reduce using rule 7 (declaracion -> si .)
    ENTERO          reduce using rule 7 (declaracion -> si .)
    DECIMAL         reduce using rule 7 (declaracion -> si .)
    BOOL            reduce using rule 7 (declaracion -> si .)
    LISTA           reduce using rule 7 (declaracion -> si .)
    DICCIONARIO     reduce using rule 7 (declaracion -> si .)
    PARENTESIS_IZQ  reduce using rule 7 (declaracion -> si .)
    IDENTIFICADOR   reduce using rule 7 (declaracion -> si .)
    NUMENTERO       reduce using rule 7 (declaracion -> si .)
    NUMDECIMAL      reduce using rule 7 (declaracion -> si .)
    CADENA          reduce using rule 7 (declaracion -> si .)
    SI              reduce using rule 7 (declaracion -> si .)
    PARA            reduce using rule 7 (declaracion -> si .)
    MIENTRAS        reduce using rule 7 (declaracion -> si .)
    MOSTRAR_EN_PANTALLA reduce using rule 7 (declaracion -> si .)


state 12

    (8) declaracion -> para .

    LLAVE_DER       reduce using rule 8 (declaracion -> para .)
    error           reduce using rule 8 (declaracion -> para .)
    ENTERO          reduce using rule 8 (declaracion -> para .)
    DECIMAL         reduce using rule 8 (declaracion -> para .)
    BOOL            reduce using rule 8 (declaracion -> para .)
    LISTA           reduce using rule 8 (declaracion -> para .)
    DICCIONARIO     reduce using rule 8 (declaracion -> para .)
    PARENTESIS_IZQ  reduce using rule 8 (declaracion -> para .)
    IDENTIFICADOR   reduce using rule 8 (declaracion -> para .)
    NUMENTERO       reduce using rule 8 (declaracion -> para .)
    NUMDECIMAL      reduce using rule 8 (declaracion -> para .)
    CADENA          reduce using rule 8 (declaracion -> para .)
    SI              reduce using rule 8 (declaracion -> para .)
    PARA            reduce using rule 8 (declaracion -> para .)
    MIENTRAS        reduce using rule 8 (declaracion -> para .)
    MOSTRAR_EN_PANTALLA reduce using rule 8 (declaracion -> para .)


state 13

    (9) declaracion -> mientras .

    LLAVE_DER       reduce using rule 9 (declaracion -> mientras .)
    error           reduce using rule 9 (declaracion -> mientras .)
    ENTERO          reduce using rule 9 (declaracion -> mientras .)
    DECIMAL         reduce using rule 9 (declaracion -> mientras .)
    BOOL            reduce using rule 9 (declaracion -> mientras .)
    LISTA           reduce using rule 9 (declaracion -> mientras .)
    DICCIONARIO     reduce using rule 9 (declaracion -> mientras .)
    PARENTESIS_IZQ  reduce using rule 9 (declaracion -> mientras .)
    IDENTIFICADOR   reduce using rule 9 (declaracion -> mientras .)
    NUMENTERO       reduce using rule 9 (declaracion -> mientras .)
    NUMDECIMAL      reduce using rule 9 (declaracion -> mientras .)
    CADENA          reduce using rule 9 (declaracion -> mientras .)
    SI              reduce using rule 9 (declaracion -> mientras .)
    PARA            reduce using rule 9 (declaracion -> mientras .)
    MIENTRAS        reduce using rule 9 (declaracion -> mientras .)
    MOSTRAR_EN_PANTALLA reduce using rule 9 (declaracion -> mientras .)


state 14

    (10) declaracion -> mostrar_en_pantalla .

    LLAVE_DER       reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    error           reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    ENTERO          reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    DECIMAL         reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    BOOL            reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    LISTA           reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    DICCIONARIO     reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    PARENTESIS_IZQ  reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    IDENTIFICADOR   reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    NUMENTERO       reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    NUMDECIMAL      reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    CADENA          reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    SI              reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    PARA            reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    MIENTRAS        reduce using rule 10 (declaracion -> mostrar_en_pantalla .)
    MOSTRAR_EN_PANTALLA reduce using rule 10 (declaracion -> mostrar_en_pantalla .)


state 15

    (51) declaracion -> error . IDENTIFICADOR IGUAL expresion PUNTO_COMA
    (53) declaracion -> error . PUNTO_COMA

    IDENTIFICADOR   shift and go to state 49
    PUNTO_COMA      shift and go to state 50


state 16

    (11) tipo -> ENTERO .

    IDENTIFICADOR   reduce using rule 11 (tipo -> ENTERO .)
    error           reduce using rule 11 (tipo -> ENTERO .)


state 17

    (12) tipo -> DECIMAL .

    IDENTIFICADOR   reduce using rule 12 (tipo -> DECIMAL .)
    error           reduce using rule 12 (tipo -> DECIMAL .)


state 18

    (13) tipo -> BOOL .
    (21) expresion -> BOOL .

    IDENTIFICADOR   reduce using rule 13 (tipo -> BOOL .)
    error           reduce using rule 13 (tipo -> BOOL .)
    PUNTO_COMA      reduce using rule 21 (expresion -> BOOL .)
    MAS             reduce using rule 21 (expresion -> BOOL .)
    MENOS           reduce using rule 21 (expresion -> BOOL .)
    POR             reduce using rule 21 (expresion -> BOOL .)
    DIVIDIDO        reduce using rule 21 (expresion -> BOOL .)
    IGUAL           reduce using rule 21 (expresion -> BOOL .)
    DIFERENTE       reduce using rule 21 (expresion -> BOOL .)
    MENOR           reduce using rule 21 (expresion -> BOOL .)
    MAYOR           reduce using rule 21 (expresion -> BOOL .)
    MENOR_IGUAL     reduce using rule 21 (expresion -> BOOL .)
    MAYOR_IGUAL     reduce using rule 21 (expresion -> BOOL .)
    Y               reduce using rule 21 (expresion -> BOOL .)
    O               reduce using rule 21 (expresion -> BOOL .)
    NO              reduce using rule 21 (expresion -> BOOL .)


state 19

    (14) tipo -> LISTA .
    (37) lista -> LISTA . menor_tipo LLAVE_IZQ valores_lista LLAVE_DER
    (38) menor_tipo -> . MENOR IDENTIFICADOR MAYOR

    IDENTIFICADOR   reduce using rule 14 (tipo -> LISTA .)
    error           reduce using rule 14 (tipo -> LISTA .)
    MENOR           shift and go to state 52

    menor_tipo                     shift and go to state 51

state 20

    (15) tipo -> DICCIONARIO .

    IDENTIFICADOR   reduce using rule 15 (tipo -> DICCIONARIO .)
    error           reduce using rule 15 (tipo -> DICCIONARIO .)


state 21

    (17) expresion -> PARENTESIS_IZQ . expresion PARENTESIS_DER
    (16) expresion -> . expresion operador expresion
    (17) expresion -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (18) expresion -> . IDENTIFICADOR
    (19) expresion -> . NUMENTERO
    (20) expresion -> . NUMDECIMAL
    (21) expresion -> . BOOL
    (22) expresion -> . CADENA
    (23) expresion -> . lista
    (37) lista -> . LISTA menor_tipo LLAVE_IZQ valores_lista LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 21
    IDENTIFICADOR   shift and go to state 9
    NUMENTERO       shift and go to state 22
    NUMDECIMAL      shift and go to state 23
    BOOL            shift and go to state 54
    CADENA          shift and go to state 24
    LISTA           shift and go to state 55

    expresion                      shift and go to state 53
    lista                          shift and go to state 25

state 22

    (19) expresion -> NUMENTERO .

    PUNTO_COMA      reduce using rule 19 (expresion -> NUMENTERO .)
    MAS             reduce using rule 19 (expresion -> NUMENTERO .)
    MENOS           reduce using rule 19 (expresion -> NUMENTERO .)
    POR             reduce using rule 19 (expresion -> NUMENTERO .)
    DIVIDIDO        reduce using rule 19 (expresion -> NUMENTERO .)
    IGUAL           reduce using rule 19 (expresion -> NUMENTERO .)
    DIFERENTE       reduce using rule 19 (expresion -> NUMENTERO .)
    MENOR           reduce using rule 19 (expresion -> NUMENTERO .)
    MAYOR           reduce using rule 19 (expresion -> NUMENTERO .)
    MENOR_IGUAL     reduce using rule 19 (expresion -> NUMENTERO .)
    MAYOR_IGUAL     reduce using rule 19 (expresion -> NUMENTERO .)
    Y               reduce using rule 19 (expresion -> NUMENTERO .)
    O               reduce using rule 19 (expresion -> NUMENTERO .)
    NO              reduce using rule 19 (expresion -> NUMENTERO .)
    PARENTESIS_DER  reduce using rule 19 (expresion -> NUMENTERO .)


state 23

    (20) expresion -> NUMDECIMAL .

    PUNTO_COMA      reduce using rule 20 (expresion -> NUMDECIMAL .)
    MAS             reduce using rule 20 (expresion -> NUMDECIMAL .)
    MENOS           reduce using rule 20 (expresion -> NUMDECIMAL .)
    POR             reduce using rule 20 (expresion -> NUMDECIMAL .)
    DIVIDIDO        reduce using rule 20 (expresion -> NUMDECIMAL .)
    IGUAL           reduce using rule 20 (expresion -> NUMDECIMAL .)
    DIFERENTE       reduce using rule 20 (expresion -> NUMDECIMAL .)
    MENOR           reduce using rule 20 (expresion -> NUMDECIMAL .)
    MAYOR           reduce using rule 20 (expresion -> NUMDECIMAL .)
    MENOR_IGUAL     reduce using rule 20 (expresion -> NUMDECIMAL .)
    MAYOR_IGUAL     reduce using rule 20 (expresion -> NUMDECIMAL .)
    Y               reduce using rule 20 (expresion -> NUMDECIMAL .)
    O               reduce using rule 20 (expresion -> NUMDECIMAL .)
    NO              reduce using rule 20 (expresion -> NUMDECIMAL .)
    PARENTESIS_DER  reduce using rule 20 (expresion -> NUMDECIMAL .)


state 24

    (22) expresion -> CADENA .

    PUNTO_COMA      reduce using rule 22 (expresion -> CADENA .)
    MAS             reduce using rule 22 (expresion -> CADENA .)
    MENOS           reduce using rule 22 (expresion -> CADENA .)
    POR             reduce using rule 22 (expresion -> CADENA .)
    DIVIDIDO        reduce using rule 22 (expresion -> CADENA .)
    IGUAL           reduce using rule 22 (expresion -> CADENA .)
    DIFERENTE       reduce using rule 22 (expresion -> CADENA .)
    MENOR           reduce using rule 22 (expresion -> CADENA .)
    MAYOR           reduce using rule 22 (expresion -> CADENA .)
    MENOR_IGUAL     reduce using rule 22 (expresion -> CADENA .)
    MAYOR_IGUAL     reduce using rule 22 (expresion -> CADENA .)
    Y               reduce using rule 22 (expresion -> CADENA .)
    O               reduce using rule 22 (expresion -> CADENA .)
    NO              reduce using rule 22 (expresion -> CADENA .)
    PARENTESIS_DER  reduce using rule 22 (expresion -> CADENA .)


state 25

    (23) expresion -> lista .

    PUNTO_COMA      reduce using rule 23 (expresion -> lista .)
    MAS             reduce using rule 23 (expresion -> lista .)
    MENOS           reduce using rule 23 (expresion -> lista .)
    POR             reduce using rule 23 (expresion -> lista .)
    DIVIDIDO        reduce using rule 23 (expresion -> lista .)
    IGUAL           reduce using rule 23 (expresion -> lista .)
    DIFERENTE       reduce using rule 23 (expresion -> lista .)
    MENOR           reduce using rule 23 (expresion -> lista .)
    MAYOR           reduce using rule 23 (expresion -> lista .)
    MENOR_IGUAL     reduce using rule 23 (expresion -> lista .)
    MAYOR_IGUAL     reduce using rule 23 (expresion -> lista .)
    Y               reduce using rule 23 (expresion -> lista .)
    O               reduce using rule 23 (expresion -> lista .)
    NO              reduce using rule 23 (expresion -> lista .)
    PARENTESIS_DER  reduce using rule 23 (expresion -> lista .)


state 26

    (44) si -> SI . PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo
    (45) si -> SI . PARENTESIS_IZQ expresion Y expresion PARENTESIS_DER bloque_codigo
    (46) si -> SI . PARENTESIS_IZQ expresion O expresion PARENTESIS_DER bloque_codigo
    (47) si -> SI . PARENTESIS_IZQ NO expresion PARENTESIS_DER bloque_codigo

    PARENTESIS_IZQ  shift and go to state 56


state 27

    (48) para -> PARA . PARENTESIS_IZQ tipo IDENTIFICADOR IGUAL expresion PUNTO_COMA expresion PUNTO_COMA expresion PARENTESIS_DER bloque_codigo

    PARENTESIS_IZQ  shift and go to state 57


state 28

    (49) mientras -> MIENTRAS . PARENTESIS_IZQ expresion PARENTESIS_DER bloque_codigo

    PARENTESIS_IZQ  shift and go to state 58


state 29

    (50) mostrar_en_pantalla -> MOSTRAR_EN_PANTALLA . PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_COMA

    PARENTESIS_IZQ  shift and go to state 59


state 30

    (2) bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .

    TERMINAR        reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    LLAVE_DER       reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    error           reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    ENTERO          reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    DECIMAL         reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    BOOL            reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    LISTA           reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    DICCIONARIO     reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    PARENTESIS_IZQ  reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    IDENTIFICADOR   reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    NUMENTERO       reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    NUMDECIMAL      reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    CADENA          reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    SI              reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    PARA            reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    MIENTRAS        reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)
    MOSTRAR_EN_PANTALLA reduce using rule 2 (bloque_codigo -> LLAVE_IZQ lista_declaraciones LLAVE_DER .)


state 31

    (3) lista_declaraciones -> lista_declaraciones declaracion .
